# dd-core

./: .gitignore  Cargo.toml  README.md  build.sh  watson.sh
examples/: no_gui.rs  overdrive-glium.rs  overdrive.rs  test.rs
examples/overdrive-glium/: Cargo.toml
examples/overdrive-glium/src/: lib.rs
scripts/: vst-bundler.sh
src/: cocoa_helpers.rs  conrod_context.rs  debugging.rs  gui.rs  lib.rs  util.rs
src/app/: config.rs  event.rs  events.rs  mod.rs  params.rs  ui.rs
src/base/: config.rs  mod.rs  param.rs
src/gui/: mod.rs  window.rs
src/render/: mod.rs
src/render/shaders/: polygon.frag  polygon.vert
src/vst/: editor.rs  mod.rs  plugin.rs
src/widgets/: knob.rs  mod.rs  triangle.rs
src/window/: conrod_window.rs  events.rs  init.rs  mod.rs  window.rs
src/window/mac/: mod.rs
